had to fix link text overlap

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -58,3 +58,7 @@ nav {
   .words {
     font-size: 20px;
   }
+  ul {
+    float: right;
+    font-size: 80%;
+  }
